# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  gendiff-h.cast  gendiff.cast  gendiff_json_yaml.cast  json.cast  plain.cast  pyproject.toml
gendiff/: __init__.py  file3.json  file4.json  file4.yml  gendiff_logic.py  get_difference.py  get_format.py  get_tree.py  load_data.py  parse.py  select_format.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_formatter_json.py  test_formatter_plain.py  test_gendiff.py
tests/fixtures/: file3.json  file3.yml
