[project]
authors = [
    {name = "Rustem Yeldessov", email = "eldesov1997@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
authors = ["Rustem Yeldessov <eldesov1997@gmail.com>"]

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"