[project]
authors = [
    {name = "Rustem Yeldessov", email = "eldesov1997@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyyaml (>=6.0.2,<7.0.0)"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[tool.poetry.dependencies]
python = "^3.13"
prompt = "^0.4.1"

[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
authors = ["Rustem Yeldessov <eldesov1997@gmail.com>"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"